claudia_single_file_deployment/changeSet/TFA-133/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ContractDatestamp__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractDatestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Second_Signed_Date__c</fullName>
        <label>Customer Second Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Second_Signed_Title__c</fullName>
        <formula>Customer_Second_Signed_by__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Second Signed Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Second_Signed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Second Signed By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Going_Agreement__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates a perpetual agreement without specified end date.</inlineHelpText>
        <label>Ongoing Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signatories_Required__c</fullName>
        <inlineHelpText>Note: For registered associations two authorized signatories are required.</inlineHelpText>
        <label>Signatories Required</label>
        <picklist>
            <picklistValues>
                <fullName>Single Authorized Signatory</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Two Authorized Signatories</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Template_Provider__c</fullName>
        <inlineHelpText>If Client Template is selected, upload the 3rd party document to the Notes and Attachments section. Upload both the .doc version and the scanned signed copy.</inlineHelpText>
        <label>Template Used</label>
        <picklist>
            <picklistValues>
                <fullName>Telia Template</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Client Template</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>Power_of_Attorney_Client_to_Telia</fullName>
        <active>true</active>
        <label>Power of Attorney (Client-to-Telia)</label>
    </recordTypes>
    <validationRules>
        <fullName>PoA_Cannot_Have_Perpetual_And_Term</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &quot;Power_of_Attorney_Client_to_Telia&quot; &amp;&amp; On_Going_Agreement__c = True &amp;&amp; NOT(ISBLANK(ContractTerm))</errorConditionFormula>
        <errorMessage>Agreement defined as ongoing cannot have a fixed Contract Term. Please review validity period selections.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PoA_Must_Choose_Perpetual_or_Term_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &quot;Power_of_Attorney_Client_to_Telia&quot; &amp;&amp; On_Going_Agreement__c = False &amp;&amp; ISBLANK(ContractTerm)</errorConditionFormula>
        <errorMessage>Please fill in the Contract Term or select Ongoing Agreement for agreements with no defined end date.</errorMessage>
    </validationRules>
</CustomObject>